objects/acknowltng__CaseDeflectionQuestion__c.object
<CustomObject>
    <fields>
        <fullName>acknowltng__EnableCaseCreateButton__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Case Create Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acknowltng__MessageToShowToTheUser__c</fullName>
        <label>Message to show to the user</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>acknowltng__ParentQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Question</label>
        <referenceTo>acknowltng__CaseDeflectionQuestion__c</referenceTo>
        <relationshipLabel>Child Questions</relationshipLabel>
        <relationshipName>ChildQuestions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acknowltng__Question__c</fullName>
        <label>Question</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>acknowltng__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acknowltng__TestPicklist__c</fullName>
        <label>Test Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case Deflection Question</label>
    <listViews>
        <fullName>acknowltng__All</fullName>
        <columns>NAME</columns>
        <columns>acknowltng__Question__c</columns>
        <columns>acknowltng__ParentQuestion__c</columns>
        <columns>acknowltng__SortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CDQ-{00000}</displayFormat>
        <label>Case Deflection Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Deflection Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>